kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  homework-deployment-1
  namespace: homework
  labels:
    app: homework-app
spec:
  selector:
    matchLabels:
      app: homework-app
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  homework-app
    spec:
      containers:
      - name: homework-container
        image: busybox
        ports: 
          - containerPort: 80
        volumeMounts:
          - mountPath: /homework
            name: homework-volume
        command:
          - /bin/sh
          - -c
          - |
            httpd -f -p 80 -h /homework
        lifecycle:
          preStop:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  rm -f /homework/index.html
        readinessProbe:
          httpGet:
              path: /index.html
              port: 80
          periodSeconds: 5
      volumes:
      - name: homework-volume
        emptyDir: {}
