kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
spec:
  selector:
    app: homework-app 
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80 
  type: ClusterIP
