kubernetes-networks/httpRoute-special.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homework-route
  namespace: homework
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: homework
  hostnames:
    - "homework.otus"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /homepage
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: homework.otus
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /index.html
      backendRefs:
        - name: homework-service
          port: 80
