kubernetes-networks/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homework-route
  namespace: homework
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: homework
  hostnames:
    - "homework.otus"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homework-service
          port: 80
